cluster/gnomad/gnomad-api.deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gnomad-api
  labels:
    service: gnomad
spec:
  replicas: 1
  selector:
    matchLabels:
      name: gnomad-api
  template:
    metadata:
      labels:
        name: gnomad-api
        service: gnomad
    spec:
      containers:
      - name: app
        image: gcr.io/exac-gnomad/gnomad-api
        ports:
        - name: http
          containerPort: 80
      nodeSelector:
        cloud.google.com/gke-nodepool: "default-pool"
