cluster/gnomad/gnomad-api.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gnomad-api-nodeport
  labels:
    service: gnomad
spec:
  type: NodePort
  selector:
    name: gnomad-api
  ports:
  - port: 80
    targetPort: 80
