cluster/gnomad/gnomad-browser.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gnomad-browser-nodeport
  labels:
    service: gnomad
spec:
  type: NodePort
  selector:
    name: gnomad-browser
  ports:
  - port: 80
    targetPort: 80
