cluster/gnomad/gnomad-reads.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gnomad-reads-nodeport
  labels:
    service: gnomad
spec:
  type: NodePort
  selector:
    name: gnomad-reads
  ports:
  - port: 80
    targetPort: 80
