cluster/gnomad/gnomad.ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gnomad-ingress
  labels:
    service: gnomad
  annotations:
    kubernetes.io/ingress.global-static-ip-name: exac-gnomad-prod
    ingress.gcp.kubernetes.io/pre-shared-cert: gnomad-cert
spec:
  rules:
  - host: gnomad.broadinstitute.org
    http:
      paths:
      - path: /api
        backend:
          serviceName: gnomad-api-nodeport
          servicePort: 80
      - path: /api/*
        backend:
          serviceName: gnomad-api-nodeport
          servicePort: 80
      - path: /reads
        backend:
          serviceName: gnomad-reads-nodeport
          servicePort: 80
      - path: /reads/*
        backend:
          serviceName: gnomad-reads-nodeport
          servicePort: 80
      - path:
        backend:
          serviceName: gnomad-browser-nodeport
          servicePort: 80
